udemy/Advanced-Cloud-Native-Go/Frameworks/Gin-Web/kubernetes/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: gin-web
    tier: frontend
spec:
  rules:
  - host: books.test
    http:
      paths:
      - backend:
          service:
            name: gin-web
            port:
              number: 9090
        path: /
        pathType: Prefix
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: gin-web
  #           port:
  #             number: 9090
