udemy/Advanced-Cloud-Native-Go/Frameworks/Gin-Web/kubernetes/minikube-ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"example-ingress","namespace":"kube-system"},"spec":{"ingressClassName":"nginx","rules":[{"host":"hello-john.test","http":{"paths":[{"backend":{"service":{"name":"hello-world-app","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"hello-jane.test","http":{"paths":[{"backend":{"service":{"name":"hello-world-app","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2021-10-26T07:50:16Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-10-26T07:50:16Z"
    name: example-ingress
    namespace: kube-system
    resourceVersion: "1443"
    uid: 1305f163-88df-466e-8738-769eef960bc6
  spec:
    ingressClassName: nginx
    rules:
    - host: hello-john.test
      http:
        paths:
        - backend:
            service:
              name: hello-world-app
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: hello-jane.test
      http:
        paths:
        - backend:
            service:
              name: hello-world-app
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
